# trailfinder

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  TODO.md  cisco_interfaces.txt  cisco_routes.txt  clippy.toml  devices.example.json  devices.test.json  justfile  mikrotik_interfaces.txt  mikrotik_routes.txt  ubiquiti_plan.md
.claude/: settings.json
.claude/scripts/: dont-use-innerhtml.sh
.githooks/: pre-commit
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: build_container.yml  clippy.yml  rust_test.yml
src/: cache.rs  cli.rs  config.rs  lib.rs  main.rs  neighbor_resolution.rs  network_discovery.rs  pathfind.rs  ssh.rs  web.rs
src/brand/: cisco.rs  mikrotik.rs  mod.rs  prelude.rs  ubiquiti.rs
src/tests/: browser_integration.rs  cisco_addresses.txt  cisco_interfaces.txt  cisco_interfaces2.txt  cisco_lldp_neighbors.txt  mikrotik_addresses.txt  mikrotik_interfaces.txt  mikrotik_ipsec_network0.txt  mikrotik_ipsec_network1.txt  mikrotik_ipsec_network8.txt  mikrotik_routes.txt  mod.rs  playwright_integration.rs  test_ssh_config.txt  ubiquiti_ap_board_info.txt  ubiquiti_ap_interfaces.txt  ubiquiti_ap_lldp.txt  ubiquiti_ap_routes.txt  ui_tests.rs  web_tests.rs
src/web/: mod.rs  on_response.rs
templates/: base.html  devices.html  pathfinder.html  topology.html
test_states/: cisco-sw01.json  router01.json
tests/: browser_integration.rs  playwright_integration.rs  web_tests.rs
web/static/: README.md  app.js  common.js  devices.js  index.html  index.html.old  pathfinder.js  style.css  topology-simple.js  topology-utils.js  topology.js
web/templates/: devices.html
