[package]
name = "trailfinder"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
askama_web = { version = "0.14.6", features = ["axum-0.8"] }
axum = { version = "0.8.4", features = ["http2"] }
chrono = { version = "0.4", features = ["serde"] }
cidr = { version = "0.3.1", features = ["serde"] }
clap = { version = "4.5.46", features = ["derive"] }
dirs = "6.0"
regex = "1.11.2"
russh = { version = "0.54.3", features = ["yasna"] }
russh-keys = "0.49"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_with = { version = "3.14.0", features = ["chrono", "json"] }
shellexpand = { version = "3.1.1", features = ["path"] }
ssh_config = "0.1"
ssh-agent = "0.2.4"
tokio = { version = "1.47", features = ["full"] }
tokio-util = "0.7.16"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = { version = "0.1", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }
mac_address = { version = "1.1.8", features = ["serde"] }
thirtyfour = "0.36.1"
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[dev-dependencies]
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json"] }
terminator-rs = "0.12.14"
tokio-test = "0.4.4"
