[package]
name = "trailfinder"
version = "0.1.0"
edition = "2024"

description = "System for mapping and tracing routes through network devices."
license = "MPL-2.0"
homepage = "https://github.com/yaleman/trailfinder"
repository = "https://github.com/yaleman/trailfinder"


[dependencies]
askama = "0.14.0"
askama_web = { version = "0.14.6", features = ["axum-0.8"] }
axum = { version = "0.8.6", features = ["http2"] }
chrono = { version = "0.4", features = ["serde"] }
cidr = { version = "0.3.1", features = ["serde"] }
clap = { version = "4.5.49", features = ["derive", "env"] }
dirs = "6.0"
regex = "1.12.2"
russh = { version = "0.54.6", features = ["yasna"] }
russh-keys = "0.49"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = { version = "3.15.1", features = ["chrono", "json"] }
shellexpand = { version = "3.1.1", features = ["path"] }
# SSH agent - basic socket connectivity check implemented
tokio = { version = "1.48", features = ["full"] }
tokio-util = "0.7.16"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = { version = "0.1", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
x509-parser = "0.18.0"
mac_address = { version = "1.1.8", features = ["serde"] }
thirtyfour = "0.36.1"
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
dialoguer = "0.12.0"
rustls-pki-types = "1.12.0"
rustls = { version = "0.23.34", features = ["aws-lc-rs"] }

[dev-dependencies]
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["json"] }
tempfile = "3.23.0"
terminator-rs = "0.18.10"
tokio-test = "0.4.4"
